Added Phone Specs
The app will now be special fit for a large, high DPI phone, mine is the Galaxy S9 Plus. Because I dont intend to share, it will only be designed for this phone and scaling may be really bad on smaller screens.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">TimeClock</string>
     <string name="dailyHours">TOTAL DAILY HOURS</string>
     <string name="dailyWage">GROSS DAILY WAGES</string>
-    <string name="calculate">CALCULATE DAILY WAGES</string>
-    <string name="credit">Michael Pate, December 2018, v1.0</string>
+    <string name="calculate">CALCULATE</string>
+    <string name="credit">Michael Pate, December 2018, v1.1</string>
     <string name="resetBtn" >RESET</string>
     <string name="wageLabel">PAY RATE:</string>
     <string name="Out">OUT:</string>
@@ -13,4 +13,8 @@
     <string name="hours">HOURS:</string>
     <string name="wages">WAGES:</string>
     <string name="defaultPay">15</string>
+    <string name="tookLunch">LUNCH</string>
+    <string name="leftEarly">LEFT EARLY</string>
+    <string name="pay">15.00</string>
+    <string name="date">Tap CALCULATE</string>
 </resources>
